crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__set_model__tests__set_model_affects_both_user_and_assistant.snap
---
source: crates/forge_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)_user_and_assistant
before:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant message
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: User
        content: Another user message
after:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message
        model: gpt-4
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant message
        model: gpt-4
    - id: "[id]"
      text:
        role: System
        content: System message
        model: gpt-4
    - id: "[id]"
      text:
        role: User
        content: Another user message
        model: gpt-4
