crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__set_model__tests__set_model_for_user_messages.snap
---
source: crates/forge_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)
before:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: User
        content: User message 1
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response
    - id: "[id]"
      text:
        role: User
        content: User message 2
after:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
        model: gpt-4
    - id: "[id]"
      text:
        role: User
        content: User message 1
        model: gpt-4
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response
        model: gpt-4
    - id: "[id]"
      text:
        role: User
        content: User message 2
        model: gpt-4
